--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -32,6 +32,7 @@
         </ListView>
         <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
 Clicked="OnChooseButtonClicked"/>
+        <Button Text="Delete item" MaximumWidthRequest="300" Clicked="OnDeleteItemButtonClicked"/>
     </StackLayout>
 
 </ContentPage>
